--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.enjin.averian-roleplay</groupId>
   <artifactId>averiancore</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>AverianCore</name>
   <description>Classes, races and rolling for Averian</description>
-    <repositories>
+  <scm>
+    <connection>scm:git:https://github.com/Averian/AverianCore.git</connection>
+    <url>https://github.com/Averian/AverianCore</url>
+    <developerConnection>scm:git:https://github.com/Averian/AverianCore.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+  <repositories>
     <repository>
       <id>bukkit-repo</id>
       <url>http://repo.bukkit.org/content/groups/public/</url>
@@ -15,7 +21,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.6.2-R1.0</version>
+      <version>1.6.4-R1.0</version>
     </dependency>
   </dependencies>
   <build>
@@ -38,6 +44,13 @@
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.4.1</version>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
     </plugins>
