--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.enjin.averian-roleplay</groupId>
   <artifactId>averiancore</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3-SNAPSHOT</version>
   <name>AverianCore</name>
   <description>Classes, races and rolling for Averian</description>
   <scm>
     <connection>scm:git:https://github.com/Averian/AverianCore.git</connection>
     <url>https://github.com/Averian/AverianCore</url>
     <developerConnection>scm:git:https://github.com/Averian/AverianCore.git</developerConnection>
-    <tag>v0.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
   <repositories>
     <repository>
